--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
   <link rel="icon" href="logo.svg" type="image/svg+xml">
 
-  <meta property="og:title" content="The Keybinds™">
-  <meta property="og:description" content="Code Compile and Transform">
-  <meta property="og:image" content="default.png">   <meta property="og:image:type" content="image/png"> 
-  <meta property="og:image:width" content="1200"> 
-  <meta property="og:image:height" content="1200"> 
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="The Keybinds™" />
+  <meta name="description" content="Code Compile and Transform  your ideas into reality." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://keybinds.is-a.dev/" />
+  <meta property="og:title" content="The Keybinds™" />
+  <meta property="og:description" content="Code Compile and Transform  your ideas into reality." />
+  <meta property="og:image" content="https://keybinds.is-a.dev/default.png" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://keybinds.is-a.dev/" />
+  <meta property="twitter:title" content="The Keybinds™" />
+  <meta property="twitter:description" content="Code Compile and Transform  your ideas into reality." />
+  <meta property="twitter:image" content="https://keybinds.is-a.dev/default.png" />
+  
+   
 
   <style>
     body {
