--- a/preview/index.html
+++ b/preview/index.html
@@ -31,9 +31,11 @@
         <section id="hero" class="hero fade-in-section">
             <div class="container hero-container">
                 <h1 class="hero-title">
-                    We Build organic content machine for podcasters &
-                    Entrepreneurs
+                    We help you generate <span class="text-gradient">content</span> and get more <span
+                        class="text-gradient"> leads</span> with
+                    organic content
                 </h1>
+
                 <p class="hero-subtitle">
                     We help you in building your brand, which predictably
                     brings more leads and build trust in your market
@@ -62,12 +64,10 @@
         <section id="audience" class="section audience fade-in-section">
             <div class="container">
                 <div class="audience-list">
-                    <span class="audience-item">✦ Realtors</span>
                     <span class="audience-item">✦ Business Owners</span>
                     <span class="audience-item">✦ Coaches</span>
                     <span class="audience-item">✦ Creators</span>
                     <span class="audience-item">✦ Podcasters</span>
-                    <span class="audience-item">✦ Agency Owners</span>
                 </div>
                 <h2 class="section-title">
                     Influence your audience, on every platform
@@ -83,12 +83,75 @@
             </div>
         </section>
 
+        <section id="showcase" class="section showcase fade-in-section">
+            <div class="container">
+                <h2 class="section-title">Our Work</h2>
+                <p class="section-subtitle">
+                    Check out some of our recent video productions.
+                </p>
+                <div class="showcase-grid">
+                    <div class="showcase-item">
+                        <div class="video-wrapper">
+                            <video preload="metadata" class="showcase-video" src="./assets/videos/port1.mp4"></video>
+                            <button class="play-btn">
+                                <svg viewBox="0 0 20 20" width="24" height="24">
+                                    <path fill="currentColor" d="M8 5v14l11-7z" />
+                                </svg>
+                            </button>
+                            <div class="progress-container">
+                                <div class="progress-bar"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="showcase-item">
+                        <div class="video-wrapper">
+                            <video preload="metadata" class="showcase-video" src="./assets/videos/port2.mp4"></video>
+                            <button class="play-btn">
+                                <svg viewBox="0 0 24 24" width="24" height="24">
+                                    <path fill="currentColor" d="M8 5v14l11-7z" />
+                                </svg>
+                            </button>
+                            <div class="progress-container">
+                                <div class="progress-bar"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="showcase-item">
+                        <div class="video-wrapper">
+                            <video preload="metadata" class="showcase-video" src="./assets/videos/port3.mp4"></video>
+                            <button class="play-btn">
+                                <svg viewBox="0 0 24 24" width="24" height="24">
+                                    <path fill="currentColor" d="M8 5v14l11-7z" />
+                                </svg>
+                            </button>
+                            <div class="progress-container">
+                                <div class="progress-bar"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="showcase-item">
+                        <div class="video-wrapper">
+                            <video preload="metadata" class="showcase-video" src="./assets/videos/port4.mp4"></video>
+                            <button class="play-btn">
+                                <svg viewBox="0 0 24 24" width="24" height="24">
+                                    <path fill="currentColor" d="M8 5v14l11-7z" />
+                                </svg>
+                            </button>
+                            <div class="progress-container">
+                                <div class="progress-bar"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="benefits" class="section benefits fade-in-section">
             <div class="container">
                 <h2 class="section-title">What do you get?</h2>
-                <p class="section-subtitle">
+                <!-- <p class="section-subtitle">
                     The 360 degree content distribution with 1 Video
-                </p>
+                </p> -->
                 <div class="benefits-grid">
                     <div class="benefit-card">
                         <h3>Scale Trust</h3>
@@ -98,9 +161,9 @@
                         </p>
                     </div>
                     <div class="benefit-card">
-                        <h3>Lifetime asset</h3>
+                        <h3>24x7 support</h3>
                         <p>
-                            Build a lifetime asset of organic distribution
+                            Get 24x7 support for your organic distribution
                             in just 1 hour a week.
                         </p>
                     </div>
@@ -112,10 +175,10 @@
                         </p>
                     </div>
                     <div class="benefit-card">
-                        <h3>Consistent leads & sales</h3>
+                        <h3>Lead generation</h3>
                         <p>
-                            Our backend systems not only get you views but
-                            consistent organic leads.
+                            Our content strategies drive consistent organic leads by
+                            engaging your target audience effectively.
                         </p>
                     </div>
                 </div>
@@ -201,8 +264,7 @@
                 </div>
                 <div class="process-cta">
                     <h3>
-                        Turn 1 Hour of Recording into a Month’s Worth of
-                        Content!
+                        Generate 1 Million Views in 3 Months
                     </h3>
                     <p>
                         1 hour of video recording turns into ->> 5-7
