--- a/preview/index.html
+++ b/preview/index.html
@@ -31,9 +31,9 @@
         <section id="hero" class="hero fade-in-section">
             <div class="container hero-container">
                 <h1 class="hero-title">
-                    We help you generate <span class="text-gradient">content</span> and get more <span
-                        class="text-gradient"> leads</span> with
-                    organic content
+
+                    Helping you grow with engaging <span class="text-gradient">organic</span> content that brings in
+                    quality leads.
                 </h1>
 
                 <p class="hero-subtitle">
