--- a/preview/index.html
+++ b/preview/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet" />
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +24,10 @@
                 <a href="#testimonials">Testimonials</a>
                 <a href="#faq">FAQ</a>
             </nav>
-            <a href="https://cometmedia.co/" class="btn btn-primary">Book A Call</a>
+            <a href=""
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/envision-media97/30min?back=1&month=2025-11'});return false;"
+                class="btn btn-primary">Book A
+                Call</a>
         </div>
     </header>
 
@@ -41,7 +45,9 @@
                     brings more leads and build trust in your market
                     segment.
                 </p>
-                <a href="https://cometmedia.co/" class="btn btn-primary btn-large">Book A Call</a>
+                <a href=""
+                    onclick="Calendly.initPopupWidget({url: 'https://calendly.com/envision-media97/30min?back=1&month=2025-11'});return false;"
+                    class="btn btn-primary btn-large">Book A Call</a>
             </div>
         </section>
 
@@ -49,14 +55,12 @@
             <div class="container">
                 <h2 class="section-title">What is Envision?</h2>
                 <p class="section-text">
-                    Envision is a creative agency with a proud team of 25.
-                    Our aim is to help Podcaster and Entrepreneurs to build
-                    an online presence without them going through any
-                    resistance so they can do what they love. Our team of
-                    video editors, script writers, content specialists and
-                    content SEO experts will help you make your content
-                    standout from the market and help you build an
-                    irreplaceable brand.
+                    Envision helps you generate over 1M+ organic views in just 3 months using its proven content
+                    strategy and
+                    distribution system. You only need to record your videos — Envision takes care of everything else,
+                    from
+                    scripting and editing to optimization and daily distribution across platforms, while consistently
+                    driving organic growth, qualified leads, and sponsorship opportunities for your brand.
                 </p>
             </div>
         </section>
@@ -142,7 +146,13 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="showcase-item showcase-more">
+                        <div class="more-work-card">
+                            <h3>+ Many More</h3>
+                            <p>Check out our YouTube channel</p>
+                        </div> -->
                 </div>
+            </div>
             </div>
         </section>
 
@@ -264,7 +274,8 @@
                 </div>
                 <div class="process-cta">
                     <h3>
-                        Generate 1 Million Views in 3 Months
+                        Generate <span class="text-gradient">1M+</span> Views in just under <span
+                            class="text-gradient">3 Months</span>
                     </h3>
                     <p>
                         1 hour of video recording turns into ->> 5-7
@@ -405,9 +416,9 @@
         <div class="container footer-container">
             <div class="footer-info">
                 <a href="#" class="logo">Envision</a>
-                <p>info@envision.co</p>
-                <p>Delhi, India</p>
-                <p>+918882607192</p>
+                <p>envision.media97@gmail.com</p>
+                <p>Maharashtra, India</p>
+                <p>+91 9766519797 </p>
             </div>
             <div class="footer-links">
                 <h4>Menu</h4>
@@ -426,6 +437,7 @@
     </footer>
     <script src="./main.js"></script>
     <script src="./galaxy.js"></script>
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 </body>
 
 </html>
