--- a/preview/index.html
+++ b/preview/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Envision - Organic Content Machine</title>
+    <meta name="description"
+        content="Helping you grow with engaging organic content that brings in quality leads. Envision helps you generate over 1M+ organic views in just 3 months." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://envision.media/" />
+    <meta property="og:title" content="Envision - Organic Content Machine" />
+    <meta property="og:description"
+        content="Helping you grow with engaging organic content that brings in quality leads. Envision helps you generate over 1M+ organic views in just 3 months." />
+    <meta property="og:image" content="https://envision.media/assets/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://envision.media/" />
+    <meta property="twitter:title" content="Envision - Organic Content Machine" />
+    <meta property="twitter:description"
+        content="Helping you grow with engaging organic content that brings in quality leads. Envision helps you generate over 1M+ organic views in just 3 months." />
+    <meta property="twitter:image" content="https://envision.media/assets/og-image.png" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
