--- a/preview/index.html
+++ b/preview/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Envision - Organic Content Machine</title>
+    <link rel="icon" type="image/jpeg" href="./assets/logo.jpg" />
     <meta name="description"
         content="Helping you grow with engaging organic content that brings in quality leads. Envision helps you generate over 1M+ organic views in just 3 months." />
 
@@ -14,7 +15,7 @@
     <meta property="og:title" content="Envision - Organic Content Machine" />
     <meta property="og:description"
         content="Helping you grow with engaging organic content that brings in quality leads. Envision helps you generate over 1M+ organic views in just 3 months." />
-    <meta property="og:image" content="https://envision.media/assets/og-image.png" />
+    <meta property="og:image" content="./assets/logo.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -22,7 +23,7 @@
     <meta property="twitter:title" content="Envision - Organic Content Machine" />
     <meta property="twitter:description"
         content="Helping you grow with engaging organic content that brings in quality leads. Envision helps you generate over 1M+ organic views in just 3 months." />
-    <meta property="twitter:image" content="https://envision.media/assets/og-image.png" />
+    <meta property="twitter:image" content="./assets/logo.jpg" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
