--- a/preview/index.html
+++ b/preview/index.html
@@ -112,64 +112,242 @@
                 <p class="section-subtitle">
                     Check out some of our recent video productions.
                 </p>
-                <div class="showcase-grid">
-                    <div class="showcase-item">
-                        <div class="video-wrapper">
-                            <video preload="metadata" class="showcase-video" src="./assets/videos/port1.mp4"></video>
-                            <button class="play-btn">
-                                <svg viewBox="0 0 20 20" width="24" height="24">
-                                    <path fill="currentColor" d="M8 5v14l11-7z" />
-                                </svg>
-                            </button>
-                            <div class="progress-container">
-                                <div class="progress-bar"></div>
+                <div class="showcase-scroller">
+                    <!-- Row 1: Left to Right (or Right to Left depending on animation) -->
+                    <div class="scroll-row">
+                        <div class="scroll-track scroll-left">
+                            <!-- Original Set -->
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port1.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port2.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port3.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port4.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Duplicate Set 1 -->
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port1.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port2.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port3.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port4.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Duplicate Set 2 -->
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port1.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port2.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port3.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port4.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Duplicate Set 3 -->
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port1.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port2.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port3.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-item">
+                                <div class="video-wrapper">
+                                    <video preload="metadata" class="showcase-video"
+                                        src="./assets/videos/port4.mp4"></video>
+                                    <button class="play-btn">
+                                        <svg viewBox="0 0 24 24" width="24" height="24">
+                                            <path fill="currentColor" d="M8 5v14l11-7z" />
+                                        </svg>
+                                    </button>
+                                    <div class="progress-container">
+                                        <div class="progress-bar"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="showcase-item">
-                        <div class="video-wrapper">
-                            <video preload="metadata" class="showcase-video" src="./assets/videos/port2.mp4"></video>
-                            <button class="play-btn">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path fill="currentColor" d="M8 5v14l11-7z" />
-                                </svg>
-                            </button>
-                            <div class="progress-container">
-                                <div class="progress-bar"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="showcase-item">
-                        <div class="video-wrapper">
-                            <video preload="metadata" class="showcase-video" src="./assets/videos/port3.mp4"></video>
-                            <button class="play-btn">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path fill="currentColor" d="M8 5v14l11-7z" />
-                                </svg>
-                            </button>
-                            <div class="progress-container">
-                                <div class="progress-bar"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="showcase-item">
-                        <div class="video-wrapper">
-                            <video preload="metadata" class="showcase-video" src="./assets/videos/port4.mp4"></video>
-                            <button class="play-btn">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path fill="currentColor" d="M8 5v14l11-7z" />
-                                </svg>
-                            </button>
-                            <div class="progress-container">
-                                <div class="progress-bar"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="showcase-item showcase-more">
-                        <div class="more-work-card">
-                            <h3>+ Many More</h3>
-                            <p>Check out our YouTube channel</p>
-                        </div> -->
+
+
                 </div>
             </div>
             </div>
