--- a/index.html
+++ b/index.html
@@ -1,162 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Keybinds™</title>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>The Keybinds - Coming Soon</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./style.css" />
+    </head>
 
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-  <link rel="icon" href="logo.svg" type="image/svg+xml">
-
-  <!-- Primary Meta Tags -->
-  <meta name="title" content="The Keybinds™" />
-  <meta name="description" content="Code Compile and Transform  your ideas into reality." />
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://keybinds.is-a.dev/" />
-  <meta property="og:title" content="The Keybinds™" />
-  <meta property="og:description" content="Code Compile and Transform  your ideas into reality." />
-  <meta property="og:image" content="https://keybinds.is-a.dev/default.png" />
-  
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://keybinds.is-a.dev/" />
-  <meta property="twitter:title" content="The Keybinds™" />
-  <meta property="twitter:description" content="Code Compile and Transform  your ideas into reality." />
-  <meta property="twitter:image" content="https://keybinds.is-a.dev/default.png" />
-  
-   
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Raleway', sans-serif; 
-      background: linear-gradient(to right, #920DE9, #1536F1);
-      color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-      overflow: hidden;
-      transition: background 1s ease;
-    }
-
-    .container {
-      max-width: 600px;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      opacity: 1; 
-      visibility: visible;
-      animation: slideIn 2s forwards; 
-    }
-
-    .logo {
-      font-size: 6rem; 
-      margin-bottom: 15px;
-      animation: fadeIn 2s ease-out;
-    }
-
-    .company-name {
-      font-family: 'Raleway', sans-serif;
-      font-weight: bold;
-      font-size: 3.5rem;
-      margin-bottom: 20px;
-    }
-
-    .slogan {
-      font-family: 'Raleway', sans-serif;
-      font-weight: normal;
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-
-    .coming-soon {
-      font-family: 'Raleway', sans-serif;
-      font-weight: normal;
-      font-size: 1.5rem;
-      color: #ffcc00;
-      margin-bottom: 40px;
-      animation: fadeIn 2s ease-out;
-    }
-
-    .copyright {
-      font-size: 0.9rem;
-      position: absolute;
-      bottom: 20px;
-      width: 100%;
-      text-align: center;
-    }
-
-    @keyframes slideIn {
-      from {
-        transform: translateY(100%);
-      }
-      to {
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        padding: 15px;
-      }
-
-      .company-name {
-        font-size: 3rem;
-      }
-
-      .slogan {
-        font-size: 1rem;
-      }
-
-      .coming-soon {
-        font-size: 1.2rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .logo {
-        font-size: 5rem; 
-      }
-
-      .company-name {
-        font-size: 2.5rem;
-      }
-
-      .slogan {
-        font-size: 0.9rem;
-      }
-
-      .coming-soon {
-        font-size: 1rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="logo">
-      <img src="logo.svg" alt="Company Logo" style="max-width: 180px; margin-bottom: 20px;">
-    </div>
-    <div class="company-name">The Keybinds™</div>
-    <div class="slogan">"Code Compile and Transform"</div>
-    <div class="coming-soon">Coming Soon...</div> 
-  </div>
-  <div class="copyright">
-    &copy; 2024 The Keybinds™. All Rights Reserved.
-  </div>
-</body>
+    <body>
+        <canvas id="canvas1"></canvas>
+        <div class="container">
+            <p class="tagline">Code. Compile. Transform</p>
+            <p class="coming-soon">COMING SOON</p>
+        </div>
+        <script type="module" src="./main.js"></script>
+    </body>
 </html>
+
