--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Keybinds - Coming Soon</title>
+        <meta name="color-scheme" content="light dark" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Code. Compile. Transform. Comming Soon"
+        />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://keybinds.is-a.dev/" />
+        <meta property="og:title" content="The Keybinds" />
+        <meta
+            property="og:description"
+            content="Code. Compile. Transform. Comming Soon"
+        />
+        <meta
+            property="og:image"
+            content="https://keybinds.is-a.dev/default.png"
+        />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://keybinds.is-a.dev" />
+        <meta property="twitter:title" content="The Keybinds" />
+        <meta
+            property="twitter:description"
+            content="Code. Compile. Transform. Comming Soon"
+        />
+        <meta
+            property="twitter:image"
+            content="https://keybinds.is-a.dev/default.png"
+        />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -23,4 +56,3 @@
         <script type="module" src="./main.js"></script>
     </body>
 </html>
-
